# BE/Routes/routes.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = express.Router();
 
 const UserController = require("../Controllers/UserController");
+const AdminController = require("../Controllers/AdminController");
 
 //User routes
 router.get("/users", UserController.getAllUsers);
@@ -9,5 +10,9 @@ router.post("/users", UserController.registerUser);
 router.put("/users/:userId", UserController.updateUser);
 router.delete("/users/:userId", UserController.deleteUser);
 router.get("/users/:userId", UserController.getUserById);
+
+//Admin routes
+router.post("/admin/login", AdminController.loginAdmin);
+router.post("/admin/register", AdminController.registerAdmin);
 
 module.exports = router;
